arreglando funcionalidad de editar por ajax

--- a/accounts/templates/navbar.html
+++ b/accounts/templates/navbar.html
@@ -91,8 +91,8 @@
                 </div>
             </div>
         </div>
-        <div class="footer-copyright text-center py-3">&copy; 2018 Copyright:
-            <a href="#">UHo</a>
+        <div class="footer-copyright text-center py-3">&copy; 2018 Creado en
+            <a href="http://www.uho.edu.cu" target="_blank">Universidad de Holgu&iacute;n</a>
         </div>
     </footer>
 {% endblock %}
