añadiendo libros prestados a un estudiante y actualizando los datos por ajax

--- a/lending/templates/lending/student_list.html
+++ b/lending/templates/lending/student_list.html
@@ -73,7 +73,7 @@
                     <a href="#" class="btn btn-primary" data-type="update" id="update" data-toggle="modal"
                        data-target="#update-student">Editar</a>
                     <a href="#" class="btn btn-outline-primary" data-toggle="modal" data-target="#lending-modal"
-                       id="add-lending">
+                       id="add-lending" data-create-lending-url="{% url "lending:lending-create" %}">
                         Añadir préstamo
                     </a>
                 </div>
