mejorando la visualidad del boton subir

--- a/accounts/templates/navbar.html
+++ b/accounts/templates/navbar.html
@@ -77,7 +77,6 @@
     </main>
 
     <footer class="page-footer font-small blue pt-4">
-        <a href="#" class="go-top">Subir</a>
         <div class="container-fluid text-center text-md-left">
             <div class="row">
                 <div class="col-md-6 mt-md-0 mt-3">
@@ -109,4 +108,5 @@
             <a href="http://www.uho.edu.cu" target="_blank">Universidad de Holgu&iacute;n</a>
         </div>
     </footer>
+    <a href="#" class="go-top"><i class="fa fa-arrow-up"></i></a>
 {% endblock %}
