--- a/accounts/templates/navbar.html
+++ b/accounts/templates/navbar.html
@@ -5,7 +5,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark primary-color">
             <div class="container-fluid">
                 <a href="{% url 'dashboard' %}" class="navbar-brand">
-                    <strong>StorageLibrary</strong>
+                    <strong>AlmacénDeLibros</strong>
                 </a>
                 <div class="collapse navbar-collapse">
                     <ul class="navbar-nav mr-auto">
