--- a/accounts/templates/base.html
+++ b/accounts/templates/base.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     {% block styles %}{% endblock %}
 
-    <title>StorageLibrary - {% block title %}{% endblock %}</title>
+    <title>AlmacénDeLibros - {% block title %}{% endblock %}</title>
 </head>
 
 <body>
