eliminando usuario por ajax

--- a/accounts/templates/accounts/administrator.html
+++ b/accounts/templates/accounts/administrator.html
@@ -37,7 +37,8 @@
                     <td>
                         <a href="{% url 'accounts:detail' profile.pk %}"><i class="fa fa-eye"></i></a>
                         <a href="{% url 'accounts:update' profile.pk %}"><i class="fa fa-pencil"></i></a>
-                        <a href="{% url 'accounts:delete' profile.pk %}"><i class="fa fa-trash"></i></a>
+                        <a href="{% url 'accounts:delete' profile.pk %}" data-type="delete"
+                           data-pk="{{ profile.pk }}"><i class="fa fa-trash"></i></a>
                     </td>
                 </tr>
             {% endfor %}
@@ -76,6 +77,42 @@
                             title: 'Ha ocurrido un error',
                             showConfirmButton: false,
                             timer: 1500
+                        });
+                    }
+                });
+            });
+
+            $('a[data-type=delete]').click(function (event) {
+                event.preventDefault();
+                swal({
+                    title: '¿Estás seguro?',
+                    text: 'No se podrá recuperar la información',
+                    type: 'warning',
+                    showCancelButton: true,
+                    confirmButtonClass: 'btn btn-danger',
+                    cancelButtonClass: 'btn btn-default',
+                    confirmButtonText: '<i class="fa fa-trash fa-2x"></i>',
+                    cancelButtonText: '<i class="fa fa-close fa-2x"></i>',
+                }).then((result) => {
+                    if (result.value) {
+                        $.ajax($(this).prop('href'), {
+                            method: 'POST',
+                            success: function (response, status) {
+                                swal(
+                                    'Eliminado',
+                                    response['message'],
+                                    status
+                                ).then(() => {
+                                    location.reload();
+                                });
+                            },
+                            error: function (response, status) {
+                                swal(
+                                    'Error',
+                                    'No se ha podido ejecutar',
+                                    status
+                                );
+                            }
                         });
                     }
                 });
