--- a/accounts/templates/accounts/password_change_form.html
+++ b/accounts/templates/accounts/password_change_form.html
@@ -7,7 +7,29 @@
 {% block main %}
     <form method="post">
         {% csrf_token %}
-        {{ form }}
-        <button type="submit">Aceptar</button>
+        <div class="row">
+            <div class="col-12">
+                <label for="{{ form.old_password.id_for_label }}">{{ form.old_password.label }}</label>
+                {{ form.old_password }}
+                <span class="text-muted text-center text-danger">{{ form.old_password.errors }}</span>
+            </div>
+            <div class="col-12 col-md-6">
+                <label for="{{ form.new_password1.id_for_label }}">{{ form.new_password1.label }}</label>
+                {{ form.new_password1 }}
+                <span class="text-muted text-center text-danger">{{ form.new_password1.errors }}</span>
+                <span class="text-muted">{{ form.new_password1.help_text }}</span>
+            </div>
+            <div class="col-12 col-md-6">
+                <label for="{{ form.new_password2.id_for_label }}">{{ form.new_password2.label }}</label>
+                {{ form.new_password2 }}
+                <span class="text-muted text-center text-danger">{{ form.new_password2.errors }}</span>
+                <span class="text-muted">{{ form.new_password2.help_text }}</span>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <button type="submit" class="btn btn-default">Aceptar</button>
+            </div>
+        </div>
     </form>
 {% endblock %}
